@@ -1,3 +1,9 @@
+2005-07-09  Yvan Vanhullebus  <vanhu@free.fr>
+
+	* src/racoon/crypto_openssl.c: Fixed evp_crypt when using crypto
+	  algorithms with variable key size but not OpenSSL default key
+	  size.
+
 2005-07-12  Emmanuel Dreyfus  <manu@netbsd.org>
 
 	* src/racoon/samples/roadwarrior/client/{pahse1-up.sh|phase1-down.sh}:
